--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,7 +9,7 @@ layout: page
   {{ content }}
     
   
-  {% if site.conference.sponsors %}
+  {% if site.conference.sponsors | size > 0 %}
   <p><strong>Sponsors</strong></p>
 
   <p>This event is sponsored and co-organized by
