Add conditional for previous meeting.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -12,7 +12,7 @@ layout: page
   {% if site.conference.sponsors | size > 0 %}
   <p><strong>Sponsors</strong></p>
 
-  <p>This event is sponsored and co-organized by
+  <p>This event is sponsored by
   {% for sponsor in site.conference.sponsors %}
   <br>{% include listsponsor.html %}</br>
   {% endfor %}
