--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -8,8 +8,8 @@ layout: page
   
   {{ content }}
     
-  
-  {% if site.conference.sponsors | size > 0 %}
+  {% assign sponsorlen = {{ site.conference.sponsors | size }} %}
+  {% if sponsorlen > 0 %}
   <p><strong>Sponsors</strong></p>
 
   <p>This event is sponsored by
