--- a/_layouts/getting_there.html
+++ b/_layouts/getting_there.html
@@ -8,23 +8,11 @@ layout: page
 The {{ site.conference.name }} conference will take place in the {{site.conference.venue }} hotel, {{ site.conference.location }}.
 From {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conference.dates.last | date: "%A %B, %-d %Y" }}.
 
+{{ content }}
 
-<br>
-<br>
+{% if site.map.show %}
+{% include map.html %}
+{% endif %}	  
 
-<p>
-<a href="https://www.google.com/maps/d/u/1/embed?mid=16KlJ1LBjuox7Ded6JKSL6ttMGkU">
-<img border="0" src="assets/Map.png" width="75%" height="75%">
-</a>
-</p>
-     <br>
-    <br>
-    <p> The hotel is situated in the south of Tenerife on Costa Adeje:
-<ul>
-  <li>27 Km from Tenerife Sur Airport</li>
-  <li>85 Km from Tenerife Norte Airport</li>
-</ul> 
-    </p>
 
-</article>
-
+<p>Points of Interest for the GPSS are shown in the map with stars </p>
