--- a/_layouts/getting_there.html
+++ b/_layouts/getting_there.html
@@ -14,4 +14,6 @@ From {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conferen
 {% include map.html %}
 {% endif %}	  
 
+<p>Points of Interest for the GPSS are shown in the map with <b>stars</b></p>
+
 
