--- a/_layouts/getting_there.html
+++ b/_layouts/getting_there.html
@@ -15,5 +15,5 @@ From {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conferen
 {% endif %}	  
 
 <p>Points of Interest for the GPSS are shown in the map with <b>stars</b></p>
-
-
+<p></p>
+<p>The Summer School will take place at <b>Pam Liversidge Building, PLB-E05</b>, The University of Sheffield.</p>
