--- a/_layouts/getting_there.html
+++ b/_layouts/getting_there.html
@@ -14,6 +14,9 @@ From {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conferen
 {% include map.html %}
 {% endif %}	  
 
-<p>Points of Interest for the GPSS are shown in the map with <b>stars</b></p>
 <p></p>
-<p>The Summer School will take place at <b>Pam Liversidge Building, PLB-E05</b>, The University of Sheffield.</p>
+<p>The Summer School will take place at <b>E05, Pam Liversidge Building, The University of Sheffield</b>.</p>
+<p></p>
+<p>The Brewery Tours with Tutored Tasting, Pie & Peas will take place at the <b>Kelham Island Brewery</b>.</p>
+<p></p>
+<p>Both points of interest are shown in the map with <b>stars</b></p>
