--- a/_layouts/getting_there.html
+++ b/_layouts/getting_there.html
@@ -5,7 +5,7 @@ layout: page
 
 
 
-The {{ site.conference.name }} conference will take place in the {{site.conference.venue }} hotel, {{ site.conference.location }}.
+The {{ site.conference.name }} will take place at {{ site.conference.location }}.
 From {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conference.dates.last | date: "%A %B, %-d %Y" }}.
 
 <p></p>
@@ -17,8 +17,6 @@ From {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conferen
 {% endif %}	  
 
 <p></p>
-<p>The Summer School will take place at <b>E05, Pam Liversidge Building, The University of Sheffield</b>.</p>
+<p>The Summer School will take place in room <b>E05, Pam Liversidge Building, The University of Sheffield</b>.</p>
 <p></p>
 <p>The Brewery Tours with Tutored Tasting, Pie & Peas will take place at the <b>Kelham Island Brewery</b>.</p>
-<p></p>
-<p>Both points of interest are shown in the map with <b>stars</b></p>
