--- a/_layouts/getting_there.html
+++ b/_layouts/getting_there.html
@@ -5,7 +5,7 @@ layout: page
 
 
 
-The {{ site.conference.name }} will take place at {{ site.conference.location }}.
+The {{ site.conference.name }} will take place at the University of Sheffield, UK.
 From {{ site.conference.dates[0] | date: "%A %B, %-d %Y" }} to  {{ site.conference.dates.last | date: "%A %B, %-d %Y" }}.
 
 <p></p>
