--- a/_layouts/getting_started.html
+++ b/_layouts/getting_started.html
@@ -4,7 +4,7 @@ layout: page
 <article>
 <h2>Introduction</h2>
 <p>
-The workshop will include some hands-on tutorials in which we will build some simple Gaussian process models.
+The Summer School will include some hands-on tutorials in which we will build some simple Gaussian process models.
 The tutorials will be in Python, featuring the GPy package that has been developed by the Machine Learning group in Sheffield.
 </p>
 <p>
@@ -62,6 +62,6 @@ $ GPy.tests()
 </code></pre>
 
 <h1>Lab Sheets</h1>
-On the day we'll get started on the lab sheets;
+On the day we will get started on the lab sheets;
 
 
