--- a/_layouts/getting_started.html
+++ b/_layouts/getting_started.html
@@ -64,4 +64,5 @@ $ GPy.tests()
 <h1>Lab Sheets</h1>
 On the day we will get started on the lab sheets;
 
+  Day 1 <a ahref="http://gpss.cc/gpss17/labs/GPSS_Lab1_2017.ipynb">labsheet</a> (answers - will be uploaded later)
 
