--- a/_layouts/getting_started.html
+++ b/_layouts/getting_started.html
@@ -66,3 +66,11 @@ On the day we will get started on the lab sheets;
 
   Day 1 <a href="http://gpss.cc/gpss17/labs/GPSS_Lab1_2017.ipynb">labsheet</a> (answers - will be uploaded later)
 
+To use these notebooks, right click and save as, then, for example, in linux, one would open a terminal, change directory to where the notebooks are and launch the notebook server. For example;
+  
+  <pre><code>$ cd ~/Downloads
+$ jupyter notebook
+  </code></pre>
+ 
+ A browser window should open, connected to the notebook server.
+  
