--- a/_layouts/getting_started.html
+++ b/_layouts/getting_started.html
@@ -65,7 +65,11 @@ $ GPy.tests()
 On the day we will get started on the lab sheets;
 
   Day 1 <a href="http://gpss.cc/gpss17/labs/GPSS_Lab1_2017.ipynb">labsheet</a> (answers - will be uploaded later)
-
+ 
+  Day 2 <a href="http://gpss.cc/gpss17/labs/GPSS_Lab2_2017.ipynb">labsheet</a> (answers - will be uploaded later)
+  
+  Day 2 extra: <a href="http://gpss.cc/gpss17/labs/GPSS_Lab2extra_gplvm_2017.ipynb">GP LVM</a> (extra work!)
+  
 To use these notebooks, right click and save as, then, for example, in linux, one would open a terminal, change directory to where the notebooks are and launch the notebook server. For example;
   
   <pre><code>$ cd ~/Downloads
