--- a/_layouts/getting_started.html
+++ b/_layouts/getting_started.html
@@ -67,6 +67,7 @@ On the day we will get started on the lab sheets;
   <li>Day 1 <a href="http://gpss.cc/gpss17/labs/GPSS_Lab1_2017.ipynb">labsheet</a> (answers - will be uploaded later)</li>
   <li>Day 2 <a href="http://gpss.cc/gpss17/labs/GPSS_Lab2_2017.ipynb">labsheet</a> (answers - will be uploaded later)</li>
   <li>Day 2 extra: <a href="http://gpss.cc/gpss17/labs/GPSS_Lab2extra_gplvm_2017.ipynb">GP LVM</a> (extra work!)</li>
+  <li>Day 3 <a href="http://gpss.cc/gpss17/labs/GPSS_Lab3_2017.ipynb">labsheet</a> (answers - will be uploaded later)</li>  
   </ul>
   
 To use these notebooks, right click and save as, then, for example, in linux, one would open a terminal, change directory to where the notebooks are and launch the notebook server. For example;
